# teiniker-lectures-embedded-cicd

./: README.md
build-process/: README.md
build-process/cxx/: README.md
build-process/cxx/binutils/: README.md
build-process/cxx/build-steps/: README.md
build-process/cxx/cross-platform/: README.md
build-process/cxx/memory-segmentation/: README.md
build-process/cxx/yocto/: README.md
build-process/docker/: README.md
build-process/docker/docker-compose/: README.md
build-process/docker/docker-container/: Docker-Security.md  README.md
build-process/docker/docker-images/: Docker-Security.md  README.md
build-process/docker/introduction/: README.md
build-process/python/: README.md
build-process/python/bytecode/: README.md  fibonacci.py
build-process/python/packaging/: README.md
build-process/python/virtual-environments/: README.md
build-process/yocto/: README.md
continuous-delivery/: README.md
continuous-delivery/acceptance-stage/: README.md
continuous-delivery/executable-specification/: README.md
continuous-delivery/jenkins-cicd-flask/: README.md
continuous-delivery/release-into-production/: README.md
continuous-integration/: README.md
continuous-integration/Jenkins-docker/: Dockerfile  README.md
continuous-integration/Jenkins-docker-agent/: docker-compose.yml
continuous-integration/introduction/: README.md
continuous-integration/jenkins/: README.md
continuous-integration/jenkins-agent-docker/: README.md
continuous-integration/jenkins-agent-raspi/: README.md
continuous-integration/jenkins-agent-vm/: README.md
continuous-integration/jenkins-docker/: README.md  docker-compose.yml
continuous-integration/jenkins-docker-agent/: Dockerfile  README.md
continuous-integration/jenkins-docker-cxx/: Dockerfile  README.md  docker-compose.yml
continuous-integration/jenkins-docker-cxx-exercise/: Dockerfile  TODO.txt  jenkins.yaml
embedded-architectures/: README.md
embedded-architectures/layered/gmock/: README.md
embedded-architectures/layered/language-mechanisms/linker/display/: CMakeLists.txt  README.md
embedded-architectures/layered/language-mechanisms/linker/display/src-lcd/: CMakeLists.txt  lcd.cpp
embedded-architectures/layered/language-mechanisms/linker/display/src-oled/: CMakeLists.txt  oled.cpp
embedded-architectures/layered/language-mechanisms/linker/eeprom/: CMakeLists.txt  README.md
embedded-architectures/layered/language-mechanisms/linker/eeprom/include/: eeprom.h
embedded-architectures/layered/language-mechanisms/linker/eeprom/src-target-1/: eeprom.cpp
embedded-architectures/layered/language-mechanisms/linker/eeprom/src-target-2/: CMakeLists.txt  eeprom.cpp
embedded-architectures/layered/language-mechanisms/linker/eeprom/test/: CMakeLists.txt  test.cpp
embedded-architectures/layered/security/validation-proxy/network-service-optional/: CMakeLists.txt  network.h  network_impl.cpp  network_impl.h  network_proxy.cpp  network_proxy.h  test_impl.cpp  test_proxy.cpp
raspberry-pi/boards/: README.md
raspberry-pi/docker/: README.md
raspberry-pi/gpio/: README.md
raspberry-pi/gpio/WiringPi/gpio_blink/: CMakeLists.txt  README.md  blink.c
raspberry-pi/gpio/WiringPi/gpio_input/: .gitignore  CMakeLists.txt  gpio_input.c
raspberry-pi/setup/: README.md  SSH.md
raspberry-pi/vscode-remote/: README.md
reverse-engineering/binaries/: README.md
software-development-lifecycle/: README.md
software-development-lifecycle/extreme-programming/: README.md
software-development-lifecycle/introduction/: README.md
software-development-lifecycle/kanban/: README.md
software-development-lifecycle/scrum/: README.md
(+236 files in other folders)
